# tor-zkp

./: Cargo.toml  README.org  build.rs
circom/: calculate_correct_witness.sh  clean.sh  setup.sh
circuit-example/: calculate_incorrect_witness.sh  clean.sh  compile.sh  generate_proof.sh  verify_proof.sh
circuit-example/circuit/: main.circom
data/: verifyingkey.params
directory-authority-docker/: Dockerfile
flow-example/: docker-compose.yml
flow-example/onion-service-docker/: Dockerfile
flow-example/src/: client.rs  lib.rs
memory/: memory.org  ref.bib
src/: client.rs  lib.rs  main.rs  messages.rs  server.rs  zpie.rs
